# Controle_cam-ra_visca

./: CMakeLists.txt  README.md  ReadMe.md.txt
Build Arduino/: CMakeCache.txt  Camera.elf  Camera.hex  Makefile  cmake_install.cmake
Build PC/: CMakeCache.txt  Makefile  cmake_install.cmake
arduino/: revisions.txt
cmake/Platform/: Arduino.cmake
src/: Camera.cpp  Camera.h  IKeyboard.h  ISerial.h  ViscaCommand.cpp  ViscaCommand.h  main.cpp  main.h
src/arduino/: Arduino.cpp  KeyboardArduino.cpp  KeyboardArduino.h  SerialArduino.cpp  SerialArduino.h
src/pc/: KeyboardPC.cpp  KeyboardPC.h  SerialPC.cpp  SerialPC.h  mainPC.cpp  serialib.cpp  serialib.h
